# basic-crud-api-exercise

./: .gitignore  README.md  create_db.py  pyproject.toml
internal_mcdp/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
tests/: test_internal_mcdp.py
